# kor-coin-stream

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  main.py  producer_main.py  pyproject.toml  register_schemas.py  requirements.txt
application/: orchestrator.py
benchmark/: README.md  redis_performance_example.py  test_batch_collection_performance.py  test_redis_performance.py
common/: logger.py  metrics.py  readme.md  serde.py
common/exceptions/: base.py  error_wrappers.py  exception_rule.py
config/: .env.example  prod.yaml  readme.md  settings.py  settings.yaml
core/connection/: _base_handler.py  _utils.py  error_handler.py  health_monitor.py  subscription_manager.py
core/types/: __init__.py  _cache_types.py  _common_types.py  _exception_types.py  _payload_type.py
dev/: Makefile  producer_main.py
docs/: BACKPRESSURE_MONITORING_GUIDE.md  ENGINEERING_MANIFESTO_v1.0.md  IMPLEMENTATION_PLAN_v1.0.md  KAFKA_CONNECT_REQUEST.md  TECHNICAL_AUDIT_REPORT.md  circuit_breaker_guide.md
examples/: batch_monitoring_example.py
exchange/: __init__.py  asia.py  europe.py  korea.py  na.py  readme.md
infra/cache/: cache_client.py  (+1 more)
promiting/: first_step.md  second_step.md  three.md
results/: serialization.txt
tests/: factory_builders.py  test_avro_preflight.py  test_cache_store_ttl_and_exists.py  test_command_schema_contract.py  test_connect_success_avro_contract.py  test_consumer_client.py  test_error_adapter_make_kind.py  test_error_handler_logging.py  test_health_monitor_logging.py  test_krw_enrichment.py  test_log_phase_constants_usage.py  test_metrics_avro_contract.py  test_producer_import_canonical.py  test_regional_base_helpers.py  test_serialization_policy.py  test_settings.py  test_stream_context_adapter.py  test_subscription_ack.py  test_unified_avro.py
topic_create/: additional_topics_config.json  create_batch_topics.py  create_missing_topics.py  create_topics_now.py  realtime_batch_topics_config.json  topic_admin_app.py  websocket_topics_config.json
(+263 files in other folders)
